fix: ユーティリティクラスとコントローラの修正